AI Model 1/2 Implementation
Working on process formatting and implementation of backend model.

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ maskr/settings.py
 pip-log.txt
 pip-delete-this-directory.txt
 
+media/
+media/images/
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
